fix alignment

--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -12,7 +12,8 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-
+      align-items: center;
+      
       padding: 120px 80px;
 
       img {
